--- a/Hacker/readme
+++ b/Hacker/readme
@@ -1,1 +1,1 @@
-
+По материалам книги Спарка Флоу "Как заниматься взломом словно легенда. Прорываемся в Windows", Copyright (С) 2022 Sparc Flow, No Starch Press, Inc.
